Fix loading diagnostics and explore newest feed
